--- a/librarymanager/templates/base.html
+++ b/librarymanager/templates/base.html
@@ -37,6 +37,11 @@
 <!-- IONICONS -->
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+<!-- JQuery -->
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+
 <!-- My Scripts -->
 <script src="{% static 'js/scripts.js' %}"></script>
 </body>
