--- a/librarymanager/templates/components/content-books.html
+++ b/librarymanager/templates/components/content-books.html
@@ -15,13 +15,20 @@
     {% endfor %}
 </ul>
 {% endif %}
-<div class="col-md-10 offset-1 add-div">
+<div class="col-md-5 offset-1 add-div">
     <a href="{% url 'new_book' %}">
         <button class="btn btn-outline-success" type="submit">
             <ion-icon name="add-outline"></ion-icon>
             Adicionar livro
         </button>
     </a>
+</div>
+
+<div class="col-md-5 add-div">
+    <form class="d-flex" role="search" method="GET" id="search-form">
+        <input class="form-control me-2" type="search" id="search" name="busca" placeholder="Sua pesquisa" aria-label="Search" value="{{ request.GET.busca }}">
+        <button class="btn btn-outline-success" type="button" id="search-btn">Buscar</button>
+    </form>
 </div>
 
 <div class="row my-3">
@@ -31,6 +38,11 @@
             {% for book in books %}
             <div class="col">
                 <div class="card bg-light">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+                             role="progressbar" style="width: 50%" aria-valuenow="50"
+                             aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                     <div class="text-center">
                         <a href="{% url 'book_details' book.id %}">
                             <img src="{{book.img.url}}" class="book-img" alt="...">
@@ -47,7 +59,7 @@
                                     Editar
                                 </button>
                             </a>
-                            <a href="{% url 'delete_book' book.id %}">
+                            <a href="{% url 'delete_book' book.id %}" class="delete-btn">
                                 <button class="btn btn-outline-danger remove-book" type="submit">
                                     <ion-icon name="trash-bin-outline"></ion-icon>
                                     Excluir
@@ -59,6 +71,23 @@
             </div>
             {% endfor %}
 
+        </div>
+        <div class="pagination">
+    <span class="step-links">
+        {% if books.has_previous %}
+            <a href="?page={{books.previous_page_number}}"><ion-icon name="arrow-back-outline"></ion-icon></a>
+        {% endif %}
+
+        {% if books.paginator.num_pages %}
+        <span class="current">
+            {{books.number}} de {{books.paginator.num_pages}}
+        </span>
+        {% endif %}
+
+        {% if books.has_next %}
+            <a href="?page={{books.next_page_number}}"><ion-icon name="arrow-forward-outline"></ion-icon></a>
+        {% endif %}
+    </span>
         </div>
     </div>
 </div>
