--- a/librarymanager/templates/edit_book.html
+++ b/librarymanager/templates/edit_book.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %} Editando '{{book.name}}' {% endblock %}
 
@@ -11,7 +12,7 @@
     <h1>Editando '{{book.name}}'</h1>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{form.as_p}}
+        {{form|crispy}}
         <input type="submit" class="btn btn-success" value="Editar livro">
     </form>
 </div>
