--- a/librarymanager/templates/new_book.html
+++ b/librarymanager/templates/new_book.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %} Novo Livro {% endblock %}
 
@@ -11,7 +12,7 @@
     <h1>Adicione seu livro</h1>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{form.as_p}}
+        {{form|crispy}}
         <input type="submit" class="btn btn-success" value="Adicionar livro">
     </form>
 </div>
