feat: register user

--- a/librarymanager/templates/components/navbar.html
+++ b/librarymanager/templates/components/navbar.html
@@ -14,7 +14,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="/accounts/logout">Sair
+                        <a class="nav-link text-light" id="logout-btn" href="/accounts/logout">Sair
                             <ion-icon name="log-out-outline"></ion-icon>
                         </a>
                     </li>
