feat: user for book

--- a/librarymanager/templates/components/navbar.html
+++ b/librarymanager/templates/components/navbar.html
@@ -18,6 +18,9 @@
                             <ion-icon name="log-out-outline"></ion-icon>
                         </a>
                     </li>
+                    <li class="nav-item text-right">
+                        <a class="nav-link text-info" id="" href="#">{{user.username}}</a>
+                    </li>
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link text-light" href="/accounts/logout">Entrar
