--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -20,6 +20,7 @@
                     {{form|crispy}}
                     <button type="submit" class="btn btn-primary btn-block">Registrar</button>
                 </form>
+                <p class="change-form-p">Já possui uma conta? <a href="/accounts/login">Entrar</a></p>
             </div>
         </div>
     </div>
