feat: update last page read

--- a/librarymanager/templates/components/navbar.html
+++ b/librarymanager/templates/components/navbar.html
@@ -19,7 +19,7 @@
                         </a>
                     </li>
                     <li class="nav-item text-right">
-                        <a class="nav-link text-info" id="" href="#">{{user.username}}</a>
+                        <a class="nav-link text-primary" id="" href="#">{{user.username}}</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
