--- a/librarymanager/templates/components/content_books.html
+++ b/librarymanager/templates/components/content_books.html
@@ -26,7 +26,8 @@
 
 <div class="col-md-5 add-div">
     <form class="d-flex" role="search" method="GET" id="search-form">
-        <input class="form-control me-2" type="search" id="search" name="busca" placeholder="Sua pesquisa" aria-label="Search" value="{{ request.GET.busca }}">
+        <input class="form-control me-2" type="search" id="search" name="busca" placeholder="Sua pesquisa"
+               aria-label="Search" value="{{ request.GET.busca }}">
         <button class="btn btn-outline-success" type="button" id="search-btn">Buscar</button>
     </form>
 </div>
@@ -39,12 +40,18 @@
             <div class="col">
                 <div class="card bg-light">
                     <div class="progress">
+                        {% if book.numberPages == book.lastPageRead %}
                         <div class="progress-bar progress-bar-striped bg-success progress-bar-animated"
-                             role="progressbar" style="width: 50%" aria-valuenow="50"
+                             role="progressbar" style="width: 100%" aria-valuenow="100"
                              aria-valuemin="0" aria-valuemax="100"></div>
+                        {% else %}
+                        <div class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
+                             role="progressbar" style="width: {{book.lastPageRead}}%" aria-valuenow="{{book.lastPageRead}}"
+                             aria-valuemin="0" aria-valuemax="100"></div>
+                        {% endif %}
                     </div>
                     <div class="text-center">
-                        <a href="{% url 'book_details' book.id %}">
+                        <a href="{% url 'update_last_page_read' book.id %}">
                             <img src="{{book.img.url}}" class="book-img" alt="...">
                         </a>
                     </div>
