--- a/librarymanager/templates/update_last_page_read.html
+++ b/librarymanager/templates/update_last_page_read.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %} Editando '{{book.name}}' {% endblock %}
+{% block title %} Atualizando leitura de: '{{book.name}}' {% endblock %}
 
 {% block banner %}
 {% include 'components/banner.html' %}
@@ -9,12 +9,13 @@
 
 {% block content%}
 <div class="container col-19 list-div">
-    <h1>Editando '{{book.name}}'</h1>
+    <h1>Atualizando leitura de: '{{book.name}}'</h1>
     <br>
+    <img width="400" src="{{book.img.url}}" class="" alt="...">
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{form|crispy}}
-        <input type="submit" class="btn btn-success" value="Editar livro">
+        <input type="submit" class="btn btn-success" value="Atualizar leitura">
     </form>
 </div>
 {% endblock %}
