feat: update progress

--- a/librarymanager/templates/components/content_books.html
+++ b/librarymanager/templates/components/content_books.html
@@ -46,7 +46,7 @@
                              aria-valuemin="0" aria-valuemax="100"></div>
                         {% else %}
                         <div class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
-                             role="progressbar" style="width: {{book.lastPageRead}}%" aria-valuenow="{{book.lastPageRead}}"
+                             role="progressbar" style="width: {{book.progress}}%" aria-valuenow="{{book.progress}}"
                              aria-valuemin="0" aria-valuemax="100"></div>
                         {% endif %}
                     </div>
