--- a/librarymanager/templates/new_book.html
+++ b/librarymanager/templates/new_book.html
@@ -10,8 +10,7 @@
 {% block content%}
 <div class="container col-19 list-div">
     <h1>Adicione seu livro</h1>
-    <br>
-    <form method="POST" enctype="multipart/form-data">
+    <form method="POST" class="form-add-up" enctype="multipart/form-data">
         {% csrf_token %}
         {{form|crispy}}
         <input type="submit" class="btn btn-success" value="Adicionar livro">
