chore: adjust cards books and add static files

--- a/librarymanager/templates/components/content_books.html
+++ b/librarymanager/templates/components/content_books.html
@@ -15,71 +15,78 @@
     {% endfor %}
 </ul>
 {% endif %}
-<div class="col-md-5 offset-1 add-div">
-    <a href="{% url 'new_book' %}">
-        <button class="btn btn-outline-success" type="submit">
-            <ion-icon name="add-outline"></ion-icon>
-            Adicionar livro
-        </button>
-    </a>
+<div class="container">
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-6 add-div">
+                <a href="{% url 'new_book' %}">
+                    <button class="btn btn-outline-success" type="submit">
+                        <ion-icon name="add-outline"></ion-icon>
+                        Adicionar livro
+                    </button>
+                </a>
+            </div>
+
+            <div class="col-md-6 add-div">
+                <form class="d-flex" role="search" method="GET" id="search-form">
+                    <input class="form-control me-2" type="search" id="search" name="busca" placeholder="Sua pesquisa"
+                           aria-label="Search" value="{{ request.GET.busca }}">
+                    <button class="btn btn-outline-success" type="button" id="search-btn">Buscar</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div class="col-md-5 add-div">
-    <form class="d-flex" role="search" method="GET" id="search-form">
-        <input class="form-control me-2" type="search" id="search" name="busca" placeholder="Sua pesquisa"
-               aria-label="Search" value="{{ request.GET.busca }}">
-        <button class="btn btn-outline-success" type="button" id="search-btn">Buscar</button>
-    </form>
-</div>
-
-<div class="row my-3">
-    <div class="col-md-10 offset-1">
-        <div class="row row-cols-1 row-cols-md-4 g-3">
-
-            {% for book in books %} 
-            <div class="col">
-                <div class="card bg-light">
-                    <div class="progress">
-                        {% if book.numberPages == book.lastPageRead %}
-                        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated"
-                             role="progressbar" style="width: 100%" aria-valuenow="100"
-                             aria-valuemin="0" aria-valuemax="100"></div>
-                        {% else %}
-                        <div class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
-                             role="progressbar" style="width: {{book.progress}}%" aria-valuenow="{{book.progress}}"
-                             aria-valuemin="0" aria-valuemax="100"></div>
-                        {% endif %}
+<div class="container">
+    <div class="row">
+        {% for book in books %}
+        <div class="col-md-3 card-container">
+            <div class="card bg-light">
+                <div class="progress">
+                    {% if book.numberPages == book.lastPageRead %}
+                    <div class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+                         role="progressbar" style="width: 100%" aria-valuenow="100"
+                         aria-valuemin="0" aria-valuemax="100">100%
                     </div>
-                    <div class="text-center">
-                        <a href="{% url 'update_last_page_read' book.id %}">
-                            <img src="{{book.img.url}}" class="book-img" alt="...">
+                    {% else %}
+                    <div class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
+                         role="progressbar" style="width: {{book.progress}}%" aria-valuenow="{{book.progress}}"
+                         aria-valuemin="0" aria-valuemax="100">{{book.progress}}%
+                    </div>
+                    {% endif %}
+                </div>
+                <div class="text-center">
+                    <a href="{% url 'update_last_page_read' book.id %}">
+                        <img src="{{book.img.url}}" class="book-img" height="300" alt="...">
+                    </a>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">{{book.name}}</h5>
+                    <p class="card-text">Autor: {{book.author}} </br> ano: {{book.year}} </br> {{book.numberPages}}
+                        páginas </p>
+                    <div>
+                        <a href="{% url 'edit_book' book.id %}">
+                            <button class="btn btn-outline-warning edit-book" type="submit">
+                                <ion-icon name="create-outline"></ion-icon>
+                                Editar
+                            </button>
                         </a>
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">{{book.name}}</h5>
-                        <p class="card-text">Autor: {{book.author}} </br> ano: {{book.year}} </br> {{book.numberPages}}
-                            páginas </p>
-                        <div>
-                            <a href="{% url 'edit_book' book.id %}">
-                                <button class="btn btn-outline-warning edit-book" type="submit">
-                                    <ion-icon name="create-outline"></ion-icon>
-                                    Editar
-                                </button>
-                            </a>
-                            <a href="{% url 'delete_book' book.id %}" class="delete-btn">
-                                <button class="btn btn-outline-danger remove-book" type="submit">
-                                    <ion-icon name="trash-bin-outline"></ion-icon>
-                                    Excluir
-                                </button>
-                            </a>
-                        </div>
+                        <a href="{% url 'delete_book' book.id %}" class="delete-btn">
+                            <button class="btn btn-outline-danger remove-book" type="submit">
+                                <ion-icon name="trash-bin-outline"></ion-icon>
+                                Excluir
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
-            {% endfor %}
-
         </div>
-        <div class="pagination">
+        {% endfor %}
+
+    </div>
+</div>
+<div class="pagination">
     <span class="step-links">
         {% if books.has_previous %}
             <a href="?page={{books.previous_page_number}}"><ion-icon name="arrow-back-outline"></ion-icon></a>
@@ -95,6 +102,6 @@
             <a href="?page={{books.next_page_number}}"><ion-icon name="arrow-forward-outline"></ion-icon></a>
         {% endif %}
     </span>
-        </div>
-    </div>
+</div>
+</div>
 </div>
